<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AllPostsActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_view_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_add_new_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_add" />
</RelativeLayout>